Fix layout bug

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -134,8 +134,9 @@
   padding: 1rem;
   transition: 0.2s ease;
   z-index: 2;
-  width: 100%;
+  min-width: 95px;
   background-color: $white;
+  justify-content: space-evenly;
 
   &.expanded {
     background-color: rgba(0, 0, 0, 0);
